# financial-insight-ai-agent

./: README.md  app.py  pyproject.toml
backend/: component.py
backend/auth/add_user_to_groups/: index.py
backend/auth/check_email_domain/: index.py
backend/auth/cognito_trigger/: index.py
backend/embedding_statemachine/bedrock_knowledge_base/fetch_stack_output/: index.py
backend/embedding_statemachine/bedrock_knowledge_base/store_knowledge_base_id/: index.py
backend/embedding_statemachine/bedrock_knowledge_base/update_bot_status/: index.py
financial_insight_ai_agent/: financial_insight_ai_agent_stack.py
infra/: app.py  cdk.json
infra/lib/constants/: docker.py
infra/lib/constructs/: api.py  api_publish_codebuild.py  auth.py  bedrock_custom_bot_codebuild.py  database.py  embeddings.py  frontend.py  usage_analysis.py  webacl_published_api.py  websocket.py
infra/lib/utils/: bedrock_guardrails.py  bedrock_knowledge_base_args.py  identity_provider.py
infra/stacks/: agent_stack.py  bedrock_custom_bot.py  regional_resources_stack.py  waf_stack.py
tests/unit/: test_financial_insight_ai_agent_stack.py
